--- a/index.ipynb
+++ b/index.ipynb
@@ -38,11 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here "
+    "#Your code here \n",
+    "import json\n",
+    "f = open('disease_data.json')\n",
+    "data = json.load(f)"
    ]
   },
   {
@@ -54,11 +57,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['meta', 'data'])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(data['meta']))\n",
+    "print(type(data['data']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['view'])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['meta'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60266"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data['data'])"
    ]
   },
   {
@@ -72,11 +166,437 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "type(data['meta']['view'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['id', 'name', 'attribution', 'attributionLink', 'averageRating', 'category', 'createdAt', 'description', 'displayType', 'downloadCount', 'hideFromCatalog', 'hideFromDataJson', 'indexUpdatedAt', 'licenseId', 'newBackend', 'numberOfComments', 'oid', 'provenance', 'publicationAppendEnabled', 'publicationDate', 'publicationGroup', 'publicationStage', 'rowClass', 'rowsUpdatedAt', 'rowsUpdatedBy', 'tableId', 'totalTimesRated', 'viewCount', 'viewLastModified', 'viewType', 'columns', 'grants', 'license', 'metadata', 'owner', 'query', 'rights', 'tableAuthor', 'tags', 'flags'])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['meta']['view'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data['meta']['view']['columns'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sid\n",
+      "id\n",
+      "position\n",
+      "created_at\n",
+      "created_meta\n",
+      "updated_at\n",
+      "updated_meta\n",
+      "meta\n",
+      "YearStart\n",
+      "YearEnd\n",
+      "LocationAbbr\n",
+      "LocationDesc\n",
+      "DataSource\n",
+      "Topic\n",
+      "Question\n",
+      "Response\n",
+      "DataValueUnit\n",
+      "DataValueType\n",
+      "DataValue\n",
+      "DataValueAlt\n",
+      "DataValueFootnoteSymbol\n",
+      "DatavalueFootnote\n",
+      "LowConfidenceLimit\n",
+      "HighConfidenceLimit\n",
+      "StratificationCategory1\n",
+      "Stratification1\n",
+      "StratificationCategory2\n",
+      "Stratification2\n",
+      "StratificationCategory3\n",
+      "Stratification3\n",
+      "GeoLocation\n",
+      "ResponseID\n",
+      "LocationID\n",
+      "TopicID\n",
+      "QuestionID\n",
+      "DataValueTypeID\n",
+      "StratificationCategoryID1\n",
+      "StratificationID1\n",
+      "StratificationCategoryID2\n",
+      "StratificationID2\n",
+      "StratificationCategoryID3\n",
+      "StratificationID3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in data['meta']['view']['columns']:\n",
+    "    print(i['name'])\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sid</th>\n",
+       "      <th>id</th>\n",
+       "      <th>position</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>created_meta</th>\n",
+       "      <th>updated_at</th>\n",
+       "      <th>updated_meta</th>\n",
+       "      <th>meta</th>\n",
+       "      <th>YearStart</th>\n",
+       "      <th>YearEnd</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>TopicID</th>\n",
+       "      <th>QuestionID</th>\n",
+       "      <th>DataValueTypeID</th>\n",
+       "      <th>StratificationCategoryID1</th>\n",
+       "      <th>StratificationID1</th>\n",
+       "      <th>StratificationCategoryID2</th>\n",
+       "      <th>StratificationID2</th>\n",
+       "      <th>StratificationCategoryID3</th>\n",
+       "      <th>StratificationID3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>FF49C41F-CE8D-46C4-9164-653B1227CF6F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1527194521</td>\n",
+       "      <td>959778</td>\n",
+       "      <td>1527194521</td>\n",
+       "      <td>959778</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>ALC</td>\n",
+       "      <td>ALC2_2</td>\n",
+       "      <td>CRDPREV</td>\n",
+       "      <td>OVERALL</td>\n",
+       "      <td>OVR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>F4468C3D-340A-4CD2-84A3-DF554DFF065E</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1527194521</td>\n",
+       "      <td>959778</td>\n",
+       "      <td>1527194521</td>\n",
+       "      <td>959778</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>...</td>\n",
+       "      <td>01</td>\n",
+       "      <td>ALC</td>\n",
+       "      <td>ALC2_2</td>\n",
+       "      <td>CRDPREV</td>\n",
+       "      <td>OVERALL</td>\n",
+       "      <td>OVR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>65609156-A343-4869-B03F-2BA62E96AC19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1527194521</td>\n",
+       "      <td>959778</td>\n",
+       "      <td>1527194521</td>\n",
+       "      <td>959778</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>...</td>\n",
+       "      <td>02</td>\n",
+       "      <td>ALC</td>\n",
+       "      <td>ALC2_2</td>\n",
+       "      <td>CRDPREV</td>\n",
+       "      <td>OVERALL</td>\n",
+       "      <td>OVR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0DB09B00-EFEB-4AC0-9467-A7CBD2B57BF3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1527194521</td>\n",
+       "      <td>959778</td>\n",
+       "      <td>1527194521</td>\n",
+       "      <td>959778</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>...</td>\n",
+       "      <td>04</td>\n",
+       "      <td>ALC</td>\n",
+       "      <td>ALC2_2</td>\n",
+       "      <td>CRDPREV</td>\n",
+       "      <td>OVERALL</td>\n",
+       "      <td>OVR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>D98DA5BA-6FD6-40F5-A9B1-ABD45E44967B</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1527194521</td>\n",
+       "      <td>959778</td>\n",
+       "      <td>1527194521</td>\n",
+       "      <td>959778</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>...</td>\n",
+       "      <td>05</td>\n",
+       "      <td>ALC</td>\n",
+       "      <td>ALC2_2</td>\n",
+       "      <td>CRDPREV</td>\n",
+       "      <td>OVERALL</td>\n",
+       "      <td>OVR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 42 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sid                                    id  position  created_at  \\\n",
+       "0    1  FF49C41F-CE8D-46C4-9164-653B1227CF6F         1  1527194521   \n",
+       "1    2  F4468C3D-340A-4CD2-84A3-DF554DFF065E         2  1527194521   \n",
+       "2    3  65609156-A343-4869-B03F-2BA62E96AC19         3  1527194521   \n",
+       "3    4  0DB09B00-EFEB-4AC0-9467-A7CBD2B57BF3         4  1527194521   \n",
+       "4    5  D98DA5BA-6FD6-40F5-A9B1-ABD45E44967B         5  1527194521   \n",
+       "\n",
+       "  created_meta  updated_at updated_meta  meta YearStart YearEnd  \\\n",
+       "0       959778  1527194521       959778  None      2016    2016   \n",
+       "1       959778  1527194521       959778  None      2016    2016   \n",
+       "2       959778  1527194521       959778  None      2016    2016   \n",
+       "3       959778  1527194521       959778  None      2016    2016   \n",
+       "4       959778  1527194521       959778  None      2016    2016   \n",
+       "\n",
+       "         ...        LocationID TopicID QuestionID DataValueTypeID  \\\n",
+       "0        ...                59     ALC     ALC2_2         CRDPREV   \n",
+       "1        ...                01     ALC     ALC2_2         CRDPREV   \n",
+       "2        ...                02     ALC     ALC2_2         CRDPREV   \n",
+       "3        ...                04     ALC     ALC2_2         CRDPREV   \n",
+       "4        ...                05     ALC     ALC2_2         CRDPREV   \n",
+       "\n",
+       "  StratificationCategoryID1 StratificationID1 StratificationCategoryID2  \\\n",
+       "0                   OVERALL               OVR                      None   \n",
+       "1                   OVERALL               OVR                      None   \n",
+       "2                   OVERALL               OVR                      None   \n",
+       "3                   OVERALL               OVR                      None   \n",
+       "4                   OVERALL               OVR                      None   \n",
+       "\n",
+       "  StratificationID2 StratificationCategoryID3 StratificationID3  \n",
+       "0              None                      None              None  \n",
+       "1              None                      None              None  \n",
+       "2              None                      None              None  \n",
+       "3              None                      None              None  \n",
+       "4              None                      None              None  \n",
+       "\n",
+       "[5 rows x 42 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(data['data'])\n",
+    "df.columns = [i['name'] for i in data['meta']['view']['columns']]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sid                                                                       5001\n",
+       "id                                        C949D47C-1B32-45CB-B9C9-D8AD75729E3F\n",
+       "position                                                                  5001\n",
+       "created_at                                                          1527194522\n",
+       "created_meta                                                            959778\n",
+       "updated_at                                                          1527194522\n",
+       "updated_meta                                                            959778\n",
+       "meta                                                                      None\n",
+       "YearStart                                                                 2016\n",
+       "YearEnd                                                                   2016\n",
+       "LocationAbbr                                                                VI\n",
+       "LocationDesc                                                    Virgin Islands\n",
+       "DataSource                                                               BRFSS\n",
+       "Topic                                                                Arthritis\n",
+       "Question                               Arthritis among adults aged >= 18 years\n",
+       "Response                                                                  None\n",
+       "DataValueUnit                                                                %\n",
+       "DataValueType                                          Age-adjusted Prevalence\n",
+       "DataValue                                                                 None\n",
+       "DataValueAlt                                                              None\n",
+       "DataValueFootnoteSymbol                                                   ****\n",
+       "DatavalueFootnote            Sample size of denominator and/or age group fo...\n",
+       "LowConfidenceLimit                                                        None\n",
+       "HighConfidenceLimit                                                       None\n",
+       "StratificationCategory1                                         Race/Ethnicity\n",
+       "Stratification1                                      Multiracial, non-Hispanic\n",
+       "StratificationCategory2                                                   None\n",
+       "Stratification2                                                           None\n",
+       "StratificationCategory3                                                   None\n",
+       "Stratification3                                                           None\n",
+       "GeoLocation                         [None, 18.335765, -64.896335, None, False]\n",
+       "ResponseID                                                                None\n",
+       "LocationID                                                                  78\n",
+       "TopicID                                                                    ART\n",
+       "QuestionID                                                              ART1_1\n",
+       "DataValueTypeID                                                     AGEADJPREV\n",
+       "StratificationCategoryID1                                                 RACE\n",
+       "StratificationID1                                                          MRC\n",
+       "StratificationCategoryID2                                                 None\n",
+       "StratificationID2                                                         None\n",
+       "StratificationCategoryID3                                                 None\n",
+       "StratificationID3                                                         None\n",
+       "Name: 5000, dtype: object"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[5000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Current asthma prevalence among adults aged >= 18 years                                    870\n",
+       "Influenza vaccination among noninstitutionalized adults aged >= 65 years with asthma       870\n",
+       "Pneumococcal vaccination among noninstitutionalized adults aged >= 65 years with asthma    870\n",
+       "Influenza vaccination among noninstitutionalized adults aged 18-64 years with asthma       870\n",
+       "Pneumococcal vaccination among noninstitutionalized adults aged 18-64 years with asthma    870\n",
+       "Asthma prevalence among women aged 18-44 years                                             325\n",
+       "Name: Question, dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.Topic == 'Asthma'].Question.value_counts()"
    ]
   },
   {
@@ -210,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
